--- a/package.json
+++ b/package.json
@@ -2,7 +2,19 @@
   "name": "electron-app",
   "version": "0.1.0",
   "private": true,
+  "author": "Captain Electron",
+  "homepage": "./",
   "main": "public/main.js",
+  "build": {
+      "appId": "com.example.electron-cra",
+      "files": [
+          "build/**/*",
+          "node_modules/**/*"
+      ],
+      "directories":{
+          "buildResources": "assets"
+      }
+  },
   "dependencies": {
     "concurrently": "^4.1.0",
     "electron": "^3.0.10",
@@ -18,7 +30,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "electron-dev": "concurrently \"BROWSER=none npm run start\" \"wait-on http://localhost:3000 && electron .\""
+    "electron-dev": "concurrently \"BROWSER=none npm run start\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron-pack": "build --em.main=build/electron.js",
+    "preelectron-pack": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
