--- a/package.json
+++ b/package.json
@@ -6,24 +6,20 @@
   "homepage": "./",
   "main": "public/main.js",
   "build": {
-      "appId": "com.example.electron-cra",
-      "files": [
-          "build/**/*",
-          "node_modules/**/*"
-      ],
-      "directories":{
-          "buildResources": "assets"
-      }
+    "appId": "com.example.electron-cra",
+    "files": [
+      "build/**/*",
+      "node_modules/**/*"
+    ],
+    "directories": {
+      "buildResources": "assets"
+    }
   },
   "dependencies": {
-    "concurrently": "^4.1.0",
-    "electron": "^3.0.10",
-    "electron-builder": "^20.36.2",
     "electron-is-dev": "^1.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1",
-    "wait-on": "^3.2.0"
+    "react-scripts": "2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,7 +27,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "electron-dev": "concurrently \"BROWSER=none npm run start\" \"wait-on http://localhost:3000 && electron .\"",
-    "electron-pack": "build --em.main=build/electron.js",
+    "electron-pack": "electron-builder -c.extraMetadata.main=build/main.js",
     "preelectron-pack": "npm run build"
   },
   "eslintConfig": {
@@ -42,5 +38,11 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "concurrently": "^4.1.0",
+    "electron": "^3.0.10",
+    "electron-builder": "^20.36.2",
+    "wait-on": "^3.2.0"
+  }
 }
